# HashCode2019

./: CMakeLists.txt  compare_tags.c  get_square_rect.c  main.c  parse.c  parsing.c  pizza.h  print_mas.c  recursion.c  slide.h  slideshow.h  stack.c  stack_operation.c
